terraform-files/terraform-fullcode/3.subnets.tf
resource "aws_subnet" "subnet1" {
  vpc_id = aws_vpc.myvpc.id
  tags = {
    Name = "Public-SN-1"
  }
  availability_zone       = "eu-north-1a"
  cidr_block              = "10.0.0.0/24"
  map_public_ip_on_launch = true
}

resource "aws_subnet" "subnet2" {
  vpc_id = aws_vpc.myvpc.id
  tags = {
    Name = "Public-SN-2"
  }
  availability_zone       = "eu-north-1b"
  cidr_block              = "10.0.1.0/24"
  map_public_ip_on_launch = true
}
